--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "github-bot",
   "version": "0.0.1",
-  "description": "A Discord bot that interacts with Github API",
+  "description": "A Discord bot that interacts with Github API.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "npm run lint && npm run lint",
+    "test": "npm run lint && npm run compile",
     "lint": "npx eslint src --fix",
     "start": "node .",
     "compile": "npx tsc"
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "@discordjs/builders": "^0.5.0",
-    "@octokit/core": "^3.5.1",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "superstruct": "^0.15.2",
