--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A Discord bot that interacts with Github API.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "npm run lint && npm run compile",
+    "test": "npx eslint src && npx tsc --noEmit",
     "lint": "npx eslint src --fix",
-    "start": "node .",
+    "start": "npm run lint && npm run compile && node .",
     "compile": "npx tsc"
   },
   "author": "DTrombett",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
     "@types/node": "^16.7.1",
+    "@types/node-fetch": "^2.5.12",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
@@ -24,9 +25,12 @@
   },
   "dependencies": {
     "@discordjs/builders": "^0.5.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "node-fetch": "^2.6.1",
     "superstruct": "^0.15.2",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "winston": "^3.3.3"
   }
 }
