feat(rest): implement rest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -167,6 +167,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-extraneous-class": "warn",
     "@typescript-eslint/no-implicit-any-catch": "warn",
+    "@typescript-eslint/no-implied-eval": "off",
     "@typescript-eslint/no-invalid-this": "warn",
     "@typescript-eslint/no-loop-func": "warn",
     "@typescript-eslint/no-loss-of-precision": "warn",
