--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@discordjs/builders": "^0.5.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/collection": "^0.2.1",
+    "@sapphire/async-queue": "^1.1.4",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1",
