--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "prettier": "^2.3.2",
-    "typescript": "^4.5.0-dev.20210826"
+    "prettier": "^2.3.2"
   },
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
@@ -33,6 +32,7 @@
     "node-fetch": "^2.6.1",
     "superstruct": "^0.15.2",
     "tslib": "^2.3.1",
+    "typescript": "^4.3.5",
     "winston": "^3.3.3"
   }
 }
