feat: implement registerCommands

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "npm run lint && npm run compile && node .",
     "build": "npm run lint && npm run compile",
     "lint": "npx eslint src --fix",
-    "compile": "npx tsc"
+    "compile": "npx tsc",
+    "commands": "node dist/Util/registerCommands",
+    "login": "node ."
   },
   "author": "DTrombett",
   "license": "MIT",
@@ -26,7 +28,9 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/collection": "^0.2.1",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "@sapphire/async-queue": "^1.1.4",
+    "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1",
