--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "@discordjs/collection": "^0.2.1",
     "@discordjs/rest": "^0.1.0-canary.0",
     "@sapphire/async-queue": "^1.1.4",
+    "bufferutil": "^4.0.3",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "erlpack": "github:discord/erlpack",
     "node-fetch": "^2.6.1",
     "superstruct": "^0.15.2",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5",
-    "winston": "^3.3.3"
+    "utf-8-validate": "^5.0.5",
+    "winston": "^3.3.3",
+    "zlib-sync": "^0.1.7"
   }
 }
