--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.1.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
@@ -45,7 +46,6 @@
     "node-fetch": "^2.6.1",
     "superstruct": "^0.15.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.3.5",
     "utf-8-validate": "^5.0.5",
     "winston": "^3.3.3",
     "zlib-sync": "^0.1.7"
