--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         run: npm i -D jest babel-jest @types/jest @babel/preset-typescript @babel/preset-env @babel/core typescript
 
       - name: Run Jest
-        run: npm run test
+        run: npm run test:ci
 
       - name: Upload Coverage
         uses: codecov/codecov-action@v1
