--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-typescript": "^7.15.0",
     "@tsconfig/node16": "^1.0.2",
+    "@types/babel__core": "^7.1.16",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.9",
     "@types/node-fetch": "^2.5.12",
