--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,17 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.4.0
+        with:
+          node-version: "16.x"
+          check-latest: true
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Install required dependencies
-        run: npm i -D jest babel-jest @types/jest @babel/preset-typescript @babel/preset-env @babel/core typescript
+        run: npm i -D jest babel-jest @types/jest @types/babel__core @babel/preset-typescript @babel/preset-env @babel/core typescript
 
       - name: Run Jest
         run: npm run test:ci
